--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                goi
-version:             0.1.0.0
-github:              "githubuser/goi"
+version:             1.0.0
+github:              "jasonstolaruk/goi"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+author:              "Jason P. Stolaruk"
+maintainer:          "jasonstolaruk@gmail.com"
+copyright:           "2022 Jason P. Stolaruk"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/goi#readme>
+description:         Please see the README on GitHub at <https://github.com/jasonstolaruk/goi#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -33,12 +33,17 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Werror
     dependencies:
     - directory
     - goi
     - mtl
     - sqlite-simple
     - text
+    when:
+    - condition: false
+      other-modules: Paths_goi
 
 tests:
   goi-test:
@@ -48,5 +53,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Werror
     dependencies:
     - goi
