--- a/goi.cabal
+++ b/goi.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dff3302e88a1d21fbdf27be69f8cd584963d16c9efc30849eee21e43fae02717
+-- hash: 803de94b36575a3832e4776f9936b7378be80785d1df566ddfbf66a8620ef766
 
 name:           goi
 version:        1.0.0
@@ -35,6 +35,7 @@ library
       Goi.Data
       Goi.FilePaths
       Goi.Util.Db
+      Goi.Util.Haskeline
       Goi.Util.IO
       Goi.Util.Misc
       Goi.Util.State
@@ -49,6 +50,7 @@ library
     , mtl
     , sqlite-simple
     , text
+    , transformers
   default-language: Haskell2010
 
 executable goi
@@ -60,6 +62,7 @@ executable goi
       base >=4.7 && <5
     , directory
     , goi
+    , haskeline
     , mtl
     , sqlite-simple
     , text
